# bsu

./: requirements.txt
Indusrial_programming/: __init__.py
Indusrial_programming/main_lab/server_side/file_reader/: json_reader.py
Indusrial_programming/main_lab/server_side/file_reader/test/: file.xml
Indusrial_programming/main_lab/server_side/test/: main.py  ui.py
Indusrial_programming/main_lab/src/server_side/: __init__.py
Indusrial_programming/main_lab/src/server_side/calculator/: __init__.py  built_in.py  custom.py
Indusrial_programming/main_lab/src/server_side/file_reader/: __init__.py  archive_decorators.py  json_reader.py
Indusrial_programming/main_lab/tests/filereader_tests/: __init__.py  file.json  tests.py
industrial_programming/: README.md  config.py  main.py  requirements.txt  toplevel.py
industrial_programming/GUI/: main.py  process_dialog.py
industrial_programming/TestDesktop/: App.desktop  Dockerfile  VenvApp.desktop  runapp.sh  rundocker.sh  usage.sh
industrial_programming/UnitTests/: dialog_tests.py  open_file_process_tests.py  packages_tests.py
industrial_programming/UnitTests/data/input/: test_json.json  test_json_expression_result.json  test_xml.xml  test_xml_crypt.xml  test_xml_expression_result.xml
industrial_programming/api/: main.py  run_server.sh
industrial_programming/api/selenium_tests/: main.py
industrial_programming/api/static/: download_file.js  upload_file.js
industrial_programming/api/templates/: index.html
industrial_programming/data/examples/: Example.json
industrial_programming/src/: file_crypt.py  file_process.py  file_zip.py
os/colloquium/: readme.md
os/colloquium/coloc1/: readme.md
os/colloquium/coloc_2/block_1/tests/: test_2_palyndrom.py  test_fibonachi_1.py  test_list_3.py
os/colloquium/coloc_3/: task_1.cpp  task_2.cpp
os/colloquium/coloc_3/tests/: task1_tests.cpp  task2_tests.cpp
os/exam/: readme.md
os/lab_1/: CMakeLists.txt  main_tests.cpp  readme.md  task.cpp  task_98.cpp
os/lab_2/: CMakeLists.txt  child.cpp  main.cpp  parent.cpp  readme.md
os/lab_2/tests/: child_tests.cpp  parent_tests.cpp
os/lab_3/: CMakeLists.txt  main.cpp  main_tests.cpp  readme.md
os/lab_4/: Boss.cpp  CMakeLists.txt  Child.cpp  Parent.cpp  main.cpp  readme.md
os/lab_4/tests/: boss_tests.cpp  child_tests.cpp  parent_tests.cpp
os/lab_5/: CMakeLists.txt  Consume.cpp  main.cpp  readme.md
os/lab_5/tests/: consumer_tests.cpp
os/lab_6/: CMakeLists.txt  main.cpp  readme.md
os/lab_7/: CMakeLists.txt  main.cpp  readme.md
